--- a/web/layouts/partials/header.html
+++ b/web/layouts/partials/header.html
@@ -134,11 +134,15 @@
         {{- $currentPage := . }}
         <ul id="menu">
             {{- range site.Menus.main }}
-            {{- $menu_item_url := (cond (strings.HasSuffix .URL "/") .URL (printf "%s/" .URL) ) | absLangURL }}
-            {{- $page_url:= $currentPage.Permalink | absLangURL }}
+            {{- $menuURL := cond (strings.HasSuffix .URL "/") .URL (printf "%s/" .URL) }}
+            {{- $langPrefix := cond (eq site.Language.Lang "it") "" "/sk" }}
+            {{- $menu_item_url := printf "%s%s" $langPrefix $menuURL | relURL }}
+            {{- $page_url:= $currentPage.RelPermalink }}
             {{- $is_search := eq (site.GetPage .KeyName).Layout `search` }}
+            {{- $page := site.GetPage $menuURL }}
+            {{- $href := cond (ne $page nil) $page.RelPermalink $menu_item_url }}
             <li>
-                <a href="{{ .URL | absLangURL }}" title="{{ .Title | default .Name }} {{- cond $is_search (" (Alt + /)" | safeHTMLAttr) ("" | safeHTMLAttr ) }}"
+                <a href="{{ $href }}" title="{{ .Title | default .Name }} {{- cond $is_search (" (Alt + /)" | safeHTMLAttr) ("" | safeHTMLAttr ) }}"
                 {{- cond $is_search (" accesskey=/" | safeHTMLAttr) ("" | safeHTMLAttr ) }}>
                     <span {{- if eq $menu_item_url $page_url }} class="active" {{- end }}>
                         {{- .Pre }}
