--- a/web/layouts/partials/header.html
+++ b/web/layouts/partials/header.html
@@ -134,17 +134,16 @@
         {{- $currentPage := . }}
         <ul id="menu">
             {{- range site.Menus.main }}
-            {{- $menuURL := cond (strings.HasSuffix .URL "/") .URL (printf "%s/" .URL) }}
-            {{- $langPrefix := cond (eq site.Language.Lang "it") "" "/sk" }}
-            {{- $menu_item_url := printf "%s%s" $langPrefix $menuURL | relURL }}
             {{- $page_url:= $currentPage.RelPermalink }}
             {{- $is_search := eq (site.GetPage .KeyName).Layout `search` }}
-            {{- $page := site.GetPage $menuURL }}
-            {{- $href := cond (ne $page nil) $page.RelPermalink $menu_item_url }}
+            {{- $href := .URL | absLangURL }}
+            {{- with .Page }}
+                {{- $href = .RelPermalink }}
+            {{- end }}
             <li>
                 <a href="{{ $href }}" title="{{ .Title | default .Name }} {{- cond $is_search (" (Alt + /)" | safeHTMLAttr) ("" | safeHTMLAttr ) }}"
                 {{- cond $is_search (" accesskey=/" | safeHTMLAttr) ("" | safeHTMLAttr ) }}>
-                    <span {{- if eq $menu_item_url $page_url }} class="active" {{- end }}>
+                    <span {{- if eq $href $page_url }} class="active" {{- end }}>
                         {{- .Pre }}
                         {{- .Name -}}
                         {{ .Post -}}
